# langchain

./: .gitignore  LECL_Design_Pattern.ipynb  LangChainExpressionLanguage_lcel.ipynb  pyproject.toml
Langgraph/: React-Agent-Laggraph.ipynb  React-agent.ipynb
Talk2Data/: 01_document_loading.ipynb  04_retrieval.ipynb  QnA.ipynb
langchain_ops/: Chains.ipynb  Memory.ipynb  Model_prompt_parser.ipynb
