[project]
name = "langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]

[dependency-groups]
dev = [
    "langchain",
]

[tool.uv.sources]
langchain = { workspace = true }
