[project]
name = "langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docarray>=0.41.0",
    "google-genai>=1.20.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyter-bokeh>=4.0.5",
    "langchain-google-genai>=2.1.5",
    "panel>=1.7.1",
    "pypdf>=5.6.0",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "langchain",
]

[tool.uv.sources]
langchain = { workspace = true }
